--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
-services:
+    services:
   - type: web
     name: flask-backend
     env: python
-    buildCommand: ""
+    buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn app:app --bind 0.0.0.0:$PORT"
-   
     plan: free
+
